Replace ember-sass-bootstrap with ember-bootstrap

--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -1,7 +1,7 @@
 @import '_power-select';
 
-@import 'bootstrap';
-@import 'bootstrap/theme';
+@import 'ember-bootstrap/bootstrap';
+
 @import 'bootstrap-theme-skylines';
 @import 'bootstrap-badges';
 @import 'bootstrap-vertical-tabs';
