--- a/ember/app/templates/components/nav-bar-menu-right.hbs
+++ b/ember/app/templates/components/nav-bar-menu-right.hbs
@@ -1,50 +1,52 @@
-{{#active-link}}
-  {{#link-to "flight-upload" click=didClickUpload}}
-    {{fa-icon "upload" size="lg" class="hidden-xs" title=(t "upload-flight")}}
-    {{fa-icon "upload" fixedWidth=true class="visible-xs-inline-block"}}
-    <span class="visible-xs-inline-block">{{t "upload-flight"}}</span>
-  {{/link-to}}
-{{/active-link}}
+{{#navbar.nav class="navbar-right" as |nav|}}
+  {{#nav.item}}
+    {{#nav.link-to "flight-upload"}}
+      {{fa-icon "upload" size="lg" class="hidden-xs" title=(t "upload-flight")}}
+      {{fa-icon "upload" fixedWidth=true class="visible-xs-inline-block"}}
+      <span class="visible-xs-inline-block">{{t "upload-flight"}}</span>
+    {{/nav.link-to}}
+  {{/nav.item}}
 
-{{#if session.isAuthenticated}}
-  {{#active-link}}
-    {{#link-to "notifications"}}
-      <span class="visible-xs-inline-block">{{t "notifications"}}&nbsp;&nbsp;</span>
-      <span title={{t "notifications"}}>{{notifications-badge}}</span>
-    {{/link-to}}
-  {{/active-link}}
+  {{#if session.isAuthenticated}}
+    {{#nav.item}}
+      {{#nav.link-to "notifications"}}
+        <span class="visible-xs-inline-block">{{t "notifications"}}&nbsp;&nbsp;</span>
+        <span title={{t "notifications"}}>{{notifications-badge}}</span>
+      {{/nav.link-to}}
+    {{/nav.item}}
+
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        {{account.user.name}} {{fa-icon "caret-down"}}
+      </a>
+      <ul class="dropdown-menu">{{nav-bar-user-menu}}</ul>
+    </li>
+  {{else}}
+
+    {{#nav.item class="visible-xs"}}
+      {{#nav.link-to "login"}}
+        {{fa-icon "sign-in" fixedWidth=true}} {{t "login"}}
+      {{/nav.link-to}}
+    {{/nav.item}}
+
+    <li class="dropdown hidden-xs">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        {{fa-icon "sign-in"}} {{t "login"}} {{fa-icon "caret-down"}}
+      </a>
+      <div class="dropdown-menu">{{login-form inline=true}}</div>
+    </li>
+  {{/if}}
 
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      {{account.user.name}} {{fa-icon "caret-down"}}
+      {{x-flag code=currentLocale.countryCode}}
+      <span class="visible-xs-inline-block">{{currentLocale.name}}</span>
+      {{fa-icon "caret-down"}}
     </a>
-    <ul class="dropdown-menu">{{nav-bar-user-menu}}</ul>
+    <ul class="dropdown-menu">
+      {{#each availableLocales as |locale|}}
+        <li><a href="#" {{action "setLocale" locale.code}}>{{x-flag code=locale.countryCode}} {{locale.name}}</a></li>
+      {{/each}}
+    </ul>
   </li>
-{{else}}
-
-  {{#active-link class="visible-xs"}}
-    {{#link-to "login"}}
-      {{fa-icon "sign-in" fixedWidth=true}} {{t "login"}}
-    {{/link-to}}
-  {{/active-link}}
-
-  <li class="dropdown hidden-xs">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      {{fa-icon "sign-in"}} {{t "login"}} {{fa-icon "caret-down"}}
-    </a>
-    <div class="dropdown-menu">{{login-form inline=true}}</div>
-  </li>
-{{/if}}
-
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-    {{x-flag code=currentLocale.countryCode}}
-    <span class="visible-xs-inline-block">{{currentLocale.name}}</span>
-    {{fa-icon "caret-down"}}
-  </a>
-  <ul class="dropdown-menu">
-    {{#each availableLocales as |locale|}}
-      <li><a href="#" {{action "setLocale" locale.code}}>{{x-flag code=locale.countryCode}} {{locale.name}}</a></li>
-    {{/each}}
-  </ul>
-</li>
+{{/navbar.nav}}
