routes/flight-upload: Reset controller result

--- a/ember/app/templates/components/nav-bar.hbs
+++ b/ember/app/templates/components/nav-bar.hbs
@@ -17,6 +17,6 @@
     {{/navbar.nav}}
 
     {{nav-bar-search-form onSearch=onSearch}}
-    {{nav-bar-menu-right navbar=navbar didClickUpload=(action "didClickUpload")}}
+    {{nav-bar-menu-right navbar=navbar}}
   {{/navbar.content}}
 {{/bs-navbar}}
