--- a/ember/app/templates/components/tracking-page.hbs
+++ b/ember/app/templates/components/tracking-page.hbs
@@ -1,8 +1,8 @@
 {{#if flights}}
-  <div id="sidebar" class="sidebar">
+  <div id="sidebar" class="sidebar collapsed">
     <!-- Nav tabs -->
     <ul class="sidebar-tabs" role="tablist">
-      <li class="active">
+      <li>
         <a href="#tab-overview" title="{{t "overview"}}" role="tab">
           {{fa-icon "info" size="lg"}}
         </a>
@@ -10,7 +10,7 @@
     </ul>
     <!-- Tab panes -->
     <div class="sidebar-content">
-      <div class="sidebar-pane active" id="tab-overview">
+      <div class="sidebar-pane" id="tab-overview">
         <h3>{{t "overview"}}</h3>
         <div class="sidebar-pane-content">
           {{tracking-pilots-list pilots=pilots}}
