--- a/ember/app/templates/components/nav-bar-menu-right.hbs
+++ b/ember/app/templates/components/nav-bar-menu-right.hbs
@@ -37,16 +37,18 @@
     </li>
   {{/if}}
 
-  <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+  {{#nav.dropdown tagName="li" as |dd|}}
+    {{#dd.toggle}}
       {{x-flag code=currentLocale.countryCode}}
       <span class="visible-xs-inline-block">{{currentLocale.name}}</span>
       {{fa-icon "caret-down"}}
-    </a>
-    <ul class="dropdown-menu">
+    {{/dd.toggle}}
+    {{#dd.menu as |menu|}}
       {{#each availableLocales as |locale|}}
-        <li><a href="#" {{action "setLocale" locale.code}}>{{x-flag code=locale.countryCode}} {{locale.name}}</a></li>
+        {{#menu.item}}
+          <a href="#" {{action "setLocale" locale.code}}>{{x-flag code=locale.countryCode}} {{locale.name}}</a>
+        {{/menu.item}}
       {{/each}}
-    </ul>
-  </li>
+    {{/dd.menu}}
+  {{/nav.dropdown}}
 {{/navbar.nav}}
