--- a/ember/app/templates/components/flight-list-nav.hbs
+++ b/ember/app/templates/components/flight-list-nav.hbs
@@ -1,79 +1,81 @@
-{{#active-link}}
-  {{#link-to "flights.all"}}{{t "all"}}{{/link-to}}
-{{/active-link}}
+{{#bs-nav type="pills" as |nav|}}
+  {{#nav.item}}
+    {{#nav.link-to "flights.all"}}{{t "all"}}{{/nav.link-to}}
+  {{/nav.item}}
 
-{{#if prevDate}}
-  {{#active-link}}
-    {{#link-to "flights.date" prevDate}}&nbsp;{{fa-icon "arrow-left"}}&nbsp;{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if prevDate}}
+    <li>
+      {{#link-to "flights.date" prevDate}}&nbsp;{{fa-icon "arrow-left"}}&nbsp;{{/link-to}}
+    </li>
+  {{/if}}
 
-{{#if (or (not date) latest)}}
-  {{#active-link}}
-    {{#link-to "flights.latest"}}
-      {{#if date}}
+  {{#if (or (not date) latest)}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.latest"}}
+        {{#if date}}
+          {{format-date date format="ddmmyyyy"}}
+        {{else}}
+          {{t "latest"}}
+        {{/if}}
+        &nbsp;{{#date-picker date=date onSelect=(action "dateSelected")}}{{fa-icon "calendar"}}{{/date-picker}}
+      {{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
+
+  {{#if (and date (not latest))}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.date" date}}
         {{format-date date format="ddmmyyyy"}}
-      {{else}}
-        {{t "latest"}}
-      {{/if}}
-      &nbsp;{{#date-picker date=date onSelect=(action "dateSelected")}}{{fa-icon "calendar"}}{{/date-picker}}
-    {{/link-to}}
-  {{/active-link}}
-{{/if}}
+        &nbsp;{{#date-picker date=date onSelect=(action "dateSelected")}}{{fa-icon "calendar"}}{{/date-picker}}
+      {{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
 
-{{#if (and date (not latest))}}
-  {{#active-link}}
-    {{#link-to "flights.date" date}}
-      {{format-date date format="ddmmyyyy"}}
-      &nbsp;{{#date-picker date=date onSelect=(action "dateSelected")}}{{fa-icon "calendar"}}{{/date-picker}}
-    {{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if nextDate}}
+    <li>
+      {{#link-to "flights.date" nextDate}}&nbsp;{{fa-icon "arrow-right"}}&nbsp;{{/link-to}}
+    </li>
+  {{/if}}
 
-{{#if nextDate}}
-  {{#active-link}}
-    {{#link-to "flights.date" nextDate}}&nbsp;{{fa-icon "arrow-right"}}&nbsp;{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if airport}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.airport" airport.id}}{{airport.name}}{{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
 
-{{#if airport}}
-  {{#active-link}}
-    {{#link-to "flights.airport" airport.id}}{{airport.name}}{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if club}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.club" club.id}}{{club.name}}{{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
 
-{{#if club}}
-  {{#active-link}}
-    {{#link-to "flights.club" club.id}}{{club.name}}{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if (and account.club (not-eq account.club.id club.id))}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.club" account.club.id}}{{account.club.name}}{{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
 
-{{#if (and account.club (not-eq account.club.id club.id))}}
-  {{#active-link}}
-    {{#link-to "flights.club" account.club.id}}{{account.club.name}}{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if pilot}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.pilot" pilot.id}}{{pilot.name}}{{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
 
-{{#if pilot}}
-  {{#active-link}}
-    {{#link-to "flights.pilot" pilot.id}}{{pilot.name}}{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if (and account.user (not-eq account.user.id pilot.id))}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.pilot" account.user.id}}{{account.user.name}}{{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
 
-{{#if (and account.user (not-eq account.user.id pilot.id))}}
-  {{#active-link}}
-    {{#link-to "flights.pilot" account.user.id}}{{account.user.name}}{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if account.user}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.unassigned"}}{{t "unassigned"}}{{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
 
-{{#if account.user}}
-  {{#active-link}}
-    {{#link-to "flights.unassigned"}}{{t "unassigned"}}{{/link-to}}
-  {{/active-link}}
-{{/if}}
-
-{{#if hasPinned}}
-  {{#active-link}}
-    {{#link-to "flights.pinned"}}{{t "pinned"}}{{/link-to}}
-  {{/active-link}}
-{{/if}}
+  {{#if hasPinned}}
+    {{#nav.item}}
+      {{#nav.link-to "flights.pinned"}}{{t "pinned"}}{{/nav.link-to}}
+    {{/nav.item}}
+  {{/if}}
+{{/bs-nav}}
