components/stats: Use {{bs-progress}} components

--- a/ember/app/templates/components/stats-duration-table.hbs
+++ b/ember/app/templates/components/stats-duration-table.hbs
@@ -15,14 +15,9 @@
       </span>
     </td>
     <td class="col-xs-8">
-      <div class="progress">
-        <div class="progress-bar progress-bar-warning"
-             role="progressbar"
-             aria-valuenow="{{percent year.duration max}}"
-             aria-valuemin="0"
-             aria-valuemax="100"
-             style="width: {{percent year.duration max}}%;"></div>
-      </div>
+      {{#bs-progress as |p|}}
+        {{p.bar value=(percent year.duration max) type="warning"}}
+      {{/bs-progress}}
     </td>
   </tr>
 {{/each}}
