--- a/ember/app/templates/components/stats-distance-table.hbs
+++ b/ember/app/templates/components/stats-distance-table.hbs
@@ -15,14 +15,9 @@
       </span>
     </td>
     <td class="col-xs-8">
-      <div class="progress">
-        <div class="progress-bar progress-bar-success"
-             role="progressbar"
-             aria-valuenow="{{percent year.distance max}}"
-             aria-valuemin="0"
-             aria-valuemax="100"
-             style="width: {{percent year.distance max}}%;"></div>
-      </div>
+      {{#bs-progress as |p|}}
+        {{p.bar value=(percent year.distance max) type="success"}}
+      {{/bs-progress}}
     </td>
   </tr>
 {{/each}}
