templates: Use {{bs-alert}} components

--- a/ember/app/templates/components/change-aircraft-form.hbs
+++ b/ember/app/templates/components/change-aircraft-form.hbs
@@ -1,6 +1,6 @@
 <form {{action "submit" on="submit"}}>
   {{#if error}}
-    <div class="alert alert-danger" role="alert">{{error}}</div>
+    {{#bs-alert type="danger" dismissible=false}}{{error}}{{/bs-alert}}
   {{/if}}
 
   <div class="form-group">
