--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -250,3 +250,13 @@ body, .btn, .form-control, .dropdown-menu {
 .upload-results-form {
   padding: 10px;
 }
+
+.btn-share {
+  margin-top: 5px;
+  margin-right: 28px;
+}
+
+.popover-share {
+  white-space: nowrap;
+  z-index: 5000;
+}
