--- a/ember/app/templates/components/share-button.hbs
+++ b/ember/app/templates/components/share-button.hbs
@@ -1,3 +1,12 @@
-<a href="#" class="btn btn-default btn-share btn-sm pull-right" style="margin-top: 5px; margin-right: 28px;">
+{{#bs-button class="btn-share btn-sm pull-right"}}
   {{fa-icon "share-alt"}} Share
-</a>
+
+  {{#bs-popover title="Spread the word" placement="bottom" class="popover-share"}}
+    <div style="text-align:center">
+      <input value={{url}} type="text" class="form-control" style="margin-bottom:9px">
+      <a href="https://www.facebook.com/share.php?u={{url}}" target="_blank" rel="noopener" class="btn btn-default btn-xs"><i class="fa fa-facebook"> Share</i></a>
+      <a href="https://plus.google.com/share?url={{url}}" target="_blank" rel="noopener" class="btn btn-default btn-xs"><i class="fa fa-google-plus"> Share</i></a>
+      <a href="https://twitter.com/share?url={{url}}" target="_blank" rel="noopener" class="btn btn-default btn-xs"><i class="fa fa-twitter"> Tweet</i></a>
+    </div>
+  {{/bs-popover}}
+{{/bs-button}}
