component/wingman-row: Use {{bs-popover}} component

--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -260,3 +260,8 @@ body, .btn, .form-control, .dropdown-menu {
   white-space: nowrap;
   z-index: 5000;
 }
+
+.popover-wingmen {
+  white-space: nowrap;
+  z-index: 5000;
+}
