--- a/ember/app/templates/components/wingman-row.hbs
+++ b/ember/app/templates/components/wingman-row.hbs
@@ -48,7 +48,8 @@
 <td class="times-column">
   {{format-time times.firstObject.start format='hhmmss'}}<br />
   {{format-time times.lastObject.end format='hhmmss'}}
-  <div class="times-table" style="display: none;">
+
+  {{#bs-popover title="Periods" triggerEvents="hover" class="popover-wingmen"}}
     <table>
       {{#each times as |interval|}}
         <tr>
@@ -58,5 +59,5 @@
         </tr>
       {{/each}}
     </table>
-  </div>
+  {{/bs-popover}}
 </td>
