--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -202,6 +202,7 @@ ul.list-with-dividers li[class*="col"] {
    * of the "table .show" rule that changes this setting.
    */
   white-space: normal;
+  z-index: 6000;
 }
 
 .pin {
