--- a/ember/app/templates/components/stats-distance-table.hbs
+++ b/ember/app/templates/components/stats-distance-table.hbs
@@ -9,9 +9,9 @@
   <tr>
     <td class="col-xs-2">{{year.year}}</td>
     <td class="col-xs-2">
-      <span rel="tooltip"
-            title="{{t "n-avg-distance-per-flight" distance=(format-distance year.average_distance) }}">
+      <span>
         {{format-distance year.distance}}
+        {{bs-tooltip title=(t "n-avg-distance-per-flight" distance=(format-distance year.average_distance))}}
       </span>
     </td>
     <td class="col-xs-8">
