--- a/ember/app/templates/components/stats-duration-table.hbs
+++ b/ember/app/templates/components/stats-duration-table.hbs
@@ -9,9 +9,9 @@
   <tr>
     <td class="col-xs-2">{{year.year}}</td>
     <td class="col-xs-2">
-      <span rel="tooltip"
-            title="{{t "n-avg-hours-per-flight" num=(format-hours year.average_duration) }}">
+      <span>
         {{t "n-hours" num=(format-hours year.duration)}}
+        {{bs-tooltip title=(t "n-avg-hours-per-flight" num=(format-hours year.average_duration))}}
       </span>
     </td>
     <td class="col-xs-8">
