Add acceptance test for index page

--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -2,7 +2,7 @@
   <div id="about">
     <div class="row">
       <div class="col-md-12 tagline">
-        <p class="lead pull-left">{{t "about.welcome"}}</p>
+        <p class="lead pull-left" data-test-welcome-message>{{t "about.welcome"}}</p>
 
         <div class="btn-group social-buttons pull-right visible-md visible-lg">
           <a href="https://www.facebook.com/skylines.project" class="btn btn-default" target="_blank" rel="noopener">{{fa-icon "facebook-square"}}</a>
