components/nav-bar-menu-right: Add missing closeOnMenuClick=false to login

--- a/ember/app/templates/components/nav-bar-menu-right.hbs
+++ b/ember/app/templates/components/nav-bar-menu-right.hbs
@@ -31,7 +31,7 @@
       {{/nav.link-to}}
     {{/nav.item}}
 
-    {{#nav.dropdown tagName="li" class="hidden-xs" data-test-login-dropdown=true as |dd|}}
+    {{#nav.dropdown closeOnMenuClick=false tagName="li" class="hidden-xs" data-test-login-dropdown=true as |dd|}}
       {{#dd.toggle}}
         {{fa-icon "sign-in"}} {{t "login"}} {{fa-icon "caret-down"}}
       {{/dd.toggle}}
