style: Remove duplicate underline from <abbr> tags

--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -35,6 +35,10 @@ body {
   }
 }
 
+abbr[title] {
+  text-decoration: none;
+}
+
 .fullscreen-below-nav-bar {
   position: absolute;
   width: 100%;
