--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -1,5 +1,7 @@
 @import '_power-select';
 
+$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+
 @import 'ember-bootstrap/bootstrap';
 
 @import 'bootstrap-theme-skylines';
