--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -1,5 +1,6 @@
 @import '_power-select';
 
+$body-bg: #eee;
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 
 @import 'ember-bootstrap/bootstrap';
