--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -2,6 +2,7 @@
 
 $body-bg: #eee;
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+$headings-font-weight: 700;
 
 @import 'ember-bootstrap/bootstrap';
 
