--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -3,6 +3,7 @@
 $body-bg: #eee;
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 $headings-font-weight: 700;
+$zindex-navbar-fixed: 2000;
 
 @import 'ember-bootstrap/bootstrap';
 
