--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -11,6 +11,18 @@
 }
 
 /* Override some defaults */
+html, body {
+  background-color: #eee;
+}
+
+body, h1, h2, h3, h4, h5, h6 {
+  font-family: "Ubuntu", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
+}
+
 body {
   /* 40px to make the container go all the way to the bottom of the topbar */
   padding-top: 40px;
@@ -21,10 +33,6 @@ body {
   body {
     padding-top: 50px;
   }
-}
-
-abbr[title] {
-  text-decoration: none;
 }
 
 .fullscreen-below-nav-bar {
@@ -99,9 +107,9 @@ abbr[title] {
 /* Navbar */
 
 .navbar {
+  z-index: 2000;
   min-height: 40px;
   font-weight: 400;
-  border: 0;
 }
 
 .navbar .fa-bars {
@@ -111,14 +119,13 @@ abbr[title] {
 .logo {
   width: 24px;
   height: 24px;
-  margin: -2px 6px -2px 0;
-  vertical-align: bottom;
+  margin: -6px 6px -6px 0;
 }
 
 .navbar-brand {
   font-size: 20px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 18px;
   padding: 10px 15px;
   height: 100%;
 }
@@ -136,11 +143,6 @@ abbr[title] {
 .navbar-nav > li > a {
     padding-top: 10px !important;
     padding-bottom: 10px !important;
-}
-
-.navbar .badge {
-  vertical-align: top;
-  padding: 4px 7px;
 }
 
 .navbar-form {
@@ -200,6 +202,7 @@ ul.list-with-dividers li[class*="col"] {
    * of the "table .show" rule that changes this setting.
    */
   white-space: normal;
+  z-index: 6000;
 }
 
 .pin {
