--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -25,43 +25,43 @@
     <div class="row">
       <div class="col-md-4">
         <h2>{{#link-to "flights"}}{{fa-icon "plane"}} {{t "flight-database"}}{{/link-to}}</h2>
-        <p>{{format-html-message "about.flights" uploadURL=(href-to "flight-upload")}}</p>
+        <p>{{t "about.flights" htmlSafe=true uploadURL=(href-to "flight-upload")}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{#link-to "tracking"}}{{fa-icon "rss"}} {{t "live-tracking"}}{{/link-to}}</h2>
-        <p>{{format-html-message "about.tracking" url=(href-to "tracking.info")}}</p>
+        <p>{{t "about.tracking" htmlSafe=true url=(href-to "tracking.info")}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "info-circle"}} {{t "flight-analysis"}}</h2>
-        <p>{{format-html-message "about.analysis"}}</p>
+        <p>{{t "about.analysis" htmlSafe=true}}</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <h2>{{fa-icon "map-marker"}} {{t "task-planning"}} <small>({{t "planned"}})</small></h2>
-        <p>{{format-html-message "about.task-planning" prosoar=(html-safe "<a href=\"http://www.prosoar.de/\" target=\"_blank\">proSoar</a>")}}</p>
+        <p>{{t "about.task-planning" htmlSafe=true prosoar=(html-safe "<a href=\"http://www.prosoar.de/\" target=\"_blank\">proSoar</a>")}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "trophy"}} {{t "competitions"}} <small>({{t "planned"}})</small></h2>
-        <p>{{format-html-message "about.competitions"}}</p>
+        <p>{{t "about.competitions" htmlSafe=true}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "check-square-o"}} {{t "achievements"}} <small>({{t "planned"}})</small></h2>
-        <p>{{format-html-message "about.achievements"}}</p>
+        <p>{{t "about.achievements" htmlSafe=true}}</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <h2>{{fa-icon "group"}} {{t "social-network"}}</h2>
-        <p>{{format-html-message "about.notifications" url=(href-to notificationsTarget)}}</p>
+        <p>{{t "about.notifications" htmlSafe=true url=(href-to notificationsTarget)}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "cloud"}} {{t "open-data"}}</h2>
-        <p>{{format-html-message "about.open-data" license=(html-safe "<a href=\"http://opendatacommons.org/licenses/by/summary/\" target=\"_blank\">Open Data Commons Attribution License (ODBY)</a>") welt2000=(html-safe "<a href=\"http://www.segelflug.de/vereine/welt2000/\" target=\"_blank\">WELT2000</a>")}}</p>
+        <p>{{t "about.open-data" htmlSafe=true license=(html-safe "<a href=\"http://opendatacommons.org/licenses/by/summary/\" target=\"_blank\">Open Data Commons Attribution License (ODBY)</a>") welt2000=(html-safe "<a href=\"http://www.segelflug.de/vereine/welt2000/\" target=\"_blank\">WELT2000</a>")}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "wrench"}} {{t "open-source"}}</h2>
-        <p>{{format-html-message "about.open-source" teamURL="/about/team" licenseURL="/about/license" github=(html-safe "<a href=\"https://github.com/skylines-project/skylines#contact-and-contributing\" target=\"_blank\">GitHub</a>")}}</p>
+        <p>{{t "about.open-source" htmlSafe=true teamURL="/about/team" licenseURL="/about/license" github=(html-safe "<a href=\"https://github.com/skylines-project/skylines#contact-and-contributing\" target=\"_blank\">GitHub</a>")}}</p>
       </div>
     </div>
   </div>
