templates/index: Add missing rel=noopener attributes

--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="col-md-4">
         <h2>{{fa-icon "map-marker"}} {{t "task-planning"}} <small>({{t "planned"}})</small></h2>
-        <p>{{t "about.task-planning" htmlSafe=true prosoar=(html-safe "<a href=\"http://www.prosoar.de/\" target=\"_blank\">proSoar</a>")}}</p>
+        <p>{{t "about.task-planning" htmlSafe=true prosoar=(html-safe "<a href=\"http://www.prosoar.de/\" target=\"_blank\" rel=\"noopener\">proSoar</a>")}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "trophy"}} {{t "competitions"}} <small>({{t "planned"}})</small></h2>
@@ -57,11 +57,11 @@
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "cloud"}} {{t "open-data"}}</h2>
-        <p>{{t "about.open-data" htmlSafe=true license=(html-safe "<a href=\"http://opendatacommons.org/licenses/by/summary/\" target=\"_blank\">Open Data Commons Attribution License (ODBY)</a>") welt2000=(html-safe "<a href=\"http://www.segelflug.de/vereine/welt2000/\" target=\"_blank\">WELT2000</a>")}}</p>
+        <p>{{t "about.open-data" htmlSafe=true license=(html-safe "<a href=\"http://opendatacommons.org/licenses/by/summary/\" target=\"_blank\" rel=\"noopener\">Open Data Commons Attribution License (ODBY)</a>") welt2000=(html-safe "<a href=\"http://www.segelflug.de/vereine/welt2000/\" target=\"_blank\" rel=\"noopener\">WELT2000</a>")}}</p>
       </div>
       <div class="col-md-4">
         <h2>{{fa-icon "wrench"}} {{t "open-source"}}</h2>
-        <p>{{t "about.open-source" htmlSafe=true teamURL="/about/team" licenseURL="/about/license" github=(html-safe "<a href=\"https://github.com/skylines-project/skylines#contact-and-contributing\" target=\"_blank\">GitHub</a>")}}</p>
+        <p>{{t "about.open-source" htmlSafe=true teamURL="/about/team" licenseURL="/about/license" github=(html-safe "<a href=\"https://github.com/skylines-project/skylines#contact-and-contributing\" target=\"_blank\" rel=\"noopener\">GitHub</a>")}}</p>
       </div>
     </div>
   </div>
