--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -81,19 +81,9 @@ abbr[title] {
   }
 }
 
-/* The white background content wrapper */
 .content {
-  min-height: 500px;
-  background-color: #fff;
-  padding: 15px;
-  /* negative indent the amount of the padding to maintain the grid system */
-  margin: 0 -15px;
-  -webkit-border-radius: 0 0 6px 6px;
-     -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-          box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 /* Navbar */
