--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -153,6 +153,25 @@ abbr[title] {
   font-weight: 300;
 }
 
+.table {
+  > thead,
+  > tbody,
+  > tfoot {
+    > tr {
+      > th,
+      > td {
+        border-top: none;
+      }
+    }
+  }
+  > thead > tr > th {
+    border-bottom: 1px solid $table-border-color;
+  }
+  > tbody + tbody {
+    border-top: 1px solid $table-border-color;
+  }
+}
+
 /* Page footer */
 .footer {
   /* center align it with the container */
