--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -1,16 +1,7 @@
 @import '_power-select';
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-$headings-font-weight: 700;
-$zindex-tooltip: 6000;
-$zindex-navbar-fixed: 2000;
+@import 'bootstrap';
 
-@import 'ember-bootstrap/bootstrap';
-
-@import 'bootstrap-theme-skylines';
-@import 'bootstrap-badges';
-@import 'bootstrap-vertical-tabs';
-@import 'bootstrap-datetimepicker';
 @import 'panel';
 @import 'follower-panel';
 @import 'tables';
