--- a/ember/app/styles/_bootstrap.scss
+++ b/ember/app/styles/_bootstrap.scss
@@ -2,6 +2,8 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetic
 $headings-font-weight: 700;
 $zindex-tooltip: 6000;
 $zindex-navbar-fixed: 2000;
+$zindex-modal-background: 2010;
+$zindex-modal: 2020;
 
 @import 'ember-bootstrap/bootstrap';
 
@@ -9,3 +11,5 @@ $zindex-navbar-fixed: 2000;
 @import 'bootstrap/bootstrap-badges';
 @import 'bootstrap/bootstrap-vertical-tabs';
 @import 'bootstrap/bootstrap-datetimepicker';
+
+@import "bootstrap/modals";
