styles: Refactor form-login styles

--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -4,7 +4,7 @@
 
 @import 'follower-panel';
 @import 'tables';
-@import 'login-dropdown';
+@import 'form-login';
 @import 'about';
 @import 'search';
 @import 'events';
