styles: Refactor page-header overrides

--- a/ember/app/styles/_bootstrap.scss
+++ b/ember/app/styles/_bootstrap.scss
@@ -13,4 +13,5 @@ $zindex-modal: 2020;
 @import 'bootstrap/bootstrap-datetimepicker';
 
 @import "bootstrap/modals";
+@import "bootstrap/page-header";
 @import "bootstrap/panel";
