styles: Refactor navbar overrides

--- a/ember/app/styles/_bootstrap.scss
+++ b/ember/app/styles/_bootstrap.scss
@@ -13,5 +13,6 @@ $zindex-modal: 2020;
 @import 'bootstrap/bootstrap-datetimepicker';
 
 @import "bootstrap/modals";
+@import "bootstrap/navbar";
 @import "bootstrap/page-header";
 @import "bootstrap/panel";
