styles: Refactor popover overrides

--- a/ember/app/templates/components/wingman-row.hbs
+++ b/ember/app/templates/components/wingman-row.hbs
@@ -52,7 +52,7 @@
   {{format-time times.firstObject.start format='hhmmss'}}<br />
   {{format-time times.lastObject.end format='hhmmss'}}
 
-  {{#bs-popover title="Periods" triggerEvents="hover" class="popover-wingmen"}}
+  {{#bs-popover title="Periods" triggerEvents="hover"}}
     <table>
       {{#each times as |interval|}}
         <tr>
