--- a/ember/app/styles/_bootstrap.scss
+++ b/ember/app/styles/_bootstrap.scss
@@ -1,5 +1,6 @@
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 $headings-font-weight: 700;
+$zindex-popover: 5000;
 $zindex-tooltip: 6000;
 $zindex-navbar-fixed: 2000;
 $zindex-modal-background: 2010;
