--- a/ember/app/templates/components/share-button.hbs
+++ b/ember/app/templates/components/share-button.hbs
@@ -1,7 +1,7 @@
 {{#bs-button class="btn-share btn-sm pull-right"}}
   {{fa-icon "share-alt"}} Share
 
-  {{#bs-popover title="Spread the word" placement="bottom" class="popover-share"}}
+  {{#bs-popover title="Spread the word" placement="bottom"}}
     <div style="text-align:center">
       <input value={{url}} type="text" class="form-control" style="margin-bottom:9px">
       <a href="https://www.facebook.com/share.php?u={{url}}" target="_blank" rel="noopener" class="btn btn-default btn-xs"><i class="fa fa-facebook"> Share</i></a>
