styles: Refactor footer styles

--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -15,6 +15,7 @@
 @import 'flags';
 @import 'spinner';
 @import 'loading-indicator';
+@import 'footer';
 
 @import 'ol-GraphicLayerSwitcher-v3';
 @import 'ol-PlayButton';
