styles: Refactor table overrides

--- a/ember/app/styles/_bootstrap.scss
+++ b/ember/app/styles/_bootstrap.scss
@@ -17,3 +17,4 @@ $zindex-modal: 2020;
 @import "bootstrap/navbar";
 @import "bootstrap/page-header";
 @import "bootstrap/panel";
+@import "bootstrap/tables";
