Fix sidebar icon positioning

--- a/ember/app/styles/_ol3-sidebar.scss
+++ b/ember/app/styles/_ol3-sidebar.scss
@@ -40,7 +40,8 @@
     color: #999;
     font-size: 12pt;
     overflow: hidden;
-    transition: all 80ms; }
+    transition: all 80ms;
+    list-style-type: none; }
     .sidebar-tabs > li:hover {
       color: #000;
       background-color: #ccc; }
