Adjust scale line and attribution positioning

--- a/ember/app/templates/components/tracking-page.hbs
+++ b/ember/app/templates/components/tracking-page.hbs
@@ -28,7 +28,7 @@
     onExtentChange=(action (mut mapExtent))
     onCesiumEnabledChange=(action (mut cesiumEnabled))
     calculatePadding=(action "calculatePadding")
-    class="sidebar-map"}}
+    class="sidebar-map ol-with-barogram"}}
 
     {{fullscreen-button fullscreenElement="#fullscreen-content"}}
     {{playback-button isRunning=fixCalc.isRunning onToggle=(action "togglePlayback")}}
