--- a/ember/app/templates/components/flight-page.hbs
+++ b/ember/app/templates/components/flight-page.hbs
@@ -93,7 +93,7 @@
   onCesiumEnabledChange=(action (mut cesiumEnabled))
   addFlight=(action "addFlight")
   calculatePadding=(action "calculatePadding")
-  class="sidebar-map"}}
+  class="sidebar-map ol-with-barogram"}}
 
   {{fullscreen-button fullscreenElement="#fullscreen-content"}}
   {{playback-button isRunning=fixCalc.isRunning onToggle=(action "togglePlayback")}}
