--- a/ember/app/templates/components/settings-panels/password.hbs
+++ b/ember/app/templates/components/settings-panels/password.hbs
@@ -14,7 +14,8 @@
       validation=validations.attrs.currentPassword
       label=(t "current-password")
       autocomplete="current-password"
-      disabled=saveTask.isRunning}}
+      disabled=saveTask.isRunning
+      didValidate=didValidate}}
 
     {{validated-input
       type='password'
@@ -22,7 +23,8 @@
       validation=validations.attrs.password
       label=(t "password")
       autocomplete="new-password"
-      disabled=saveTask.isRunning}}
+      disabled=saveTask.isRunning
+      didValidate=didValidate}}
 
     {{validated-input
       type='password'
@@ -30,7 +32,8 @@
       validation=validations.attrs.passwordConfirmation
       label=(t "confirm-password")
       autocomplete="new-password"
-      disabled=saveTask.isRunning}}
+      disabled=saveTask.isRunning
+      didValidate=didValidate}}
 
     <button class="btn btn-primary btn-block" type="submit" disabled={{or saveTask.isRunning (not validations.isValid)}}>
       {{t (if saveTask.isRunning "changing-password" "change-password")}}
