--- a/ember/app/templates/components/settings-panels/profile.hbs
+++ b/ember/app/templates/components/settings-panels/profile.hbs
@@ -13,21 +13,24 @@
       validation=validations.attrs.email
       label=(t "email-address")
       autocomplete="email"
-      disabled=saveTask.isRunning}}
+      disabled=saveTask.isRunning
+      didValidate=didValidate}}
 
     {{validated-input
       value=firstName
       validation=validations.attrs.firstName
       label=(t "first-name")
       autocomplete="given-name"
-      disabled=saveTask.isRunning}}
+      disabled=saveTask.isRunning
+      didValidate=didValidate}}
 
     {{validated-input
       value=lastName
       validation=validations.attrs.lastName
       label=(t "last-name")
       autocomplete="family-name"
-      disabled=saveTask.isRunning}}
+      disabled=saveTask.isRunning
+      didValidate=didValidate}}
 
     <div class="form-group">
       <label class="control-label">{{t "units.title"}}</label>
