--- a/ember/app/templates/components/settings-panels/tracking.hbs
+++ b/ember/app/templates/components/settings-panels/tracking.hbs
@@ -12,7 +12,8 @@
       value=callsign
       validation=validations.attrs.callsign
       label=(t "tracking-callsign")
-      disabled=saveTask.isRunning}}
+      disabled=saveTask.isRunning
+      didValidate=didValidate}}
 
     <div class="form-group">
       <label class="control-label">{{t "tracking-delay"}}</label>
