--- a/ember/app/templates/components/upload-flight-form.hbs
+++ b/ember/app/templates/components/upload-flight-form.hbs
@@ -3,11 +3,11 @@
     {{#bs-alert type="danger" dismissible=false}}{{error}}{{/bs-alert}}
   {{/if}}
 
-  {{#validated-block label=(t "igc-or-zip-files") validation=validations.attrs.files hasContent=files}}
+  {{#validated-block label=(t "igc-or-zip-files") validation=validations.attrs.files hasContent=files didValidate=didValidate}}
     <input type="file" name="files" multiple="multiple" onchange={{action "setFilesFromEvent"}} class="form-control" disabled={{uploadTask.isRunning}}>
   {{/validated-block}}
 
-  {{#validated-block label=(t "pilot") validation=validations.attrs.pilotId}}
+  {{#validated-block label=(t "pilot") validation=validations.attrs.pilotId didValidate=didValidate}}
     {{pilot-select clubMembers=clubMembers pilotId=pilotId onChange=(action (mut pilotId))}}
   {{/validated-block}}
 
@@ -16,7 +16,8 @@
       value=pilotName
       validation=validations.attrs.pilotName
       label=(t "pilot")
-      disabled=uploadTask.isRunning}}
+      disabled=uploadTask.isRunning
+      didValidate=didValidate}}
   {{/if}}
 
   <input type="hidden" name="pilotId" value={{pilotId}}>
