--- a/ember/app/templates/components/recover-step2-form.hbs
+++ b/ember/app/templates/components/recover-step2-form.hbs
@@ -10,14 +10,16 @@
     value=password
     validation=validations.attrs.password
     label=(t "password")
-    disabled=recoverTask.isRunning}}
+    disabled=recoverTask.isRunning
+    didValidate=didValidate}}
 
   {{validated-input
     type='password'
     value=passwordConfirmation
     validation=validations.attrs.passwordConfirmation
     label=(t "confirm-password")
-    disabled=recoverTask.isRunning}}
+    disabled=recoverTask.isRunning
+    didValidate=didValidate}}
 
   <button class="btn btn-primary btn-block" type="submit" disabled={{or recoverTask.isRunning success (not validations.isValid)}}>
     {{t (if recoverTask.isRunning "changing-password" "change-password")}}
