--- a/ember/app/templates/components/validated-input.hbs
+++ b/ember/app/templates/components/validated-input.hbs
@@ -1,3 +1,3 @@
-{{#validated-block label=label validation=validation hasContent=value forceErrorClass=forceErrorClass class=class}}
+{{#validated-block label=label validation=validation hasContent=value forceErrorClass=forceErrorClass didValidate=didValidate class=class}}
   {{input type=type value=value disabled=disabled autocomplete=autocomplete class="form-control" data-test-input=testSelector}}
 {{/validated-block}}
